# nodejs_http3

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURL_INTEROP.md  Cargo.toml  Dockerfile  Dockerfile.runtime-test  Dockerfile.test  README.md  deny.toml  docker-compose.runtime-tests.yml  docker-compose.yml  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  rustfmt.toml  spec.md  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml  distribution.yml  interop.yml  release.yml  security.yml
deploy/ecs/: README.md  full-stack.template.yaml  nlb-dual-443.template.yaml  nlb-tcp-quic-443.template.yaml  parameters.example.json  task-definition.template.json
docs/: API_CONTRACT.md  AWS_CERT_OPERATIONS.md  AWS_NLB_QUIC_PASSTHROUGH.md  CLOUDFLARE_LOCKDOWN.md  CONFIGURATION_OPTIONS.md  DEPLOYMENT_EXAMPLES.md  ECS_FARGATE_DEPLOYMENT.md  ERROR_HANDLING.md  HTTP2_PARITY_MATRIX.md  LOCAL_DOCKER_LOADTEST.md  OBSERVABILITY_RUNBOOK.md  PERF_PROFILING.md  QUICKSTART.md  QUIC_GUIDE.md  README.md  RELEASE_EVIDENCE.md  RELEASE_RUNBOOK.md  RUNTIME_MODES.md  SAFARI_VALIDATION_RUNBOOK.md  SECURITY_SUPPLY_CHAIN.md  SUPPORT_MATRIX.md  TEST_STRATEGY.md
examples/certs/: generate.sh
examples/express-adapter/: adapter.ts  package-lock.json  package.json  server.ts
examples/hono/: acme-entrypoint.sh  package-lock.json  package.json  production-server.mjs  production-server.ts  server.ts
examples/raw-api/: client.ts  server.ts
lib/: aws-cert.ts  client.ts  constants.ts  endpoint.ts  error-map.ts  errors.ts  event-loop.ts  eventsource.ts  express-adapter.ts  fetch-adapter.ts  http2-parity.ts  http3-extensions.ts  index.ts  keylog.ts  ops.ts  quic-client.ts  quic-server.ts  quic-stream.ts  runtime.ts  server.ts  session.ts  sse.ts  stream.ts
npm/darwin-arm64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: bootstrap-native-package.mjs  build-push-ecr.sh  cleanup-aws-quiclb-test.sh  concurrency-gate.mjs  docker-h3-benchmark.mjs  docker-quic-benchmark.mjs  docker-runtime-matrix.mjs  fast-v0-rollout.sh  h3-benchmark.mjs  load-curl-http.sh  profile-linux-benchmark.mjs  publish-npm-release.mjs  quic-benchmark.mjs  release-latest.mjs  safari-validation-checklist.mjs  smoke-install.mjs  verify-aws-http3.sh  verify-prebuilds.mjs
src/: buffer_pool.rs  cid.rs  client.rs  config.rs  connection.rs  connection_map.rs  error.rs  event_loop.rs  h3_event.rs  lib.rs  quic_client.rs  quic_connection.rs  quic_server.rs  quic_worker.rs  server.rs  timer_heap.rs  worker.rs
src/transport/: io_uring.rs  kqueue.rs  mod.rs  poll.rs  (+1 more)
test/: aws-cert.test.ts  browser-e2e.test.ts  client-connect-lifecycle.test.ts  curl-interop.test.ts  datagram.test.ts  error-map.test.ts  error-paths.test.ts  event-loop.test.ts  eventsource-h3.test.ts  examples.test.ts  generate-certs.ts  load-smoke.test.ts  ops.test.ts  parity-surface.test.ts  protocol-correctness.test.ts  public-api.test.ts  quic-edge-cases.test.ts  quic-kqueue-stress.test.ts  retry.test.ts  runtime-selection.test.ts  spec-gap-regressions.test.ts  spec-parity.test.ts  sse-fetch-hono.test.ts  sse-h2.test.ts  sse-h3.test.ts  unified-dual-stack.test.ts  verify-prebuilds.test.ts  worker-concurrency.test.ts  worker-edge-cases.test.ts  worker-frameworks.test.ts  worker-traffic.test.ts
tests/: curl_interop.rs  interop_quiche_direct.rs  interop_udp_loopback.rs  quiche_pair.rs  release_curl_standalone.rs  transport_quiche_pair.rs
(+61 files in other folders)
